--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "appName": "Task Manager",
   "version": "1.0.0",
   "settings": {
-    "theme": "dark",
+    "theme": "Dracula",
     "notifications": true,
     "language": "es"
   }
